Update usability of Problem class